# excel-download

./: .gitignore  CLAUDE.md  README.md  excel_to_parquet.py  main.py  pyproject.toml
ai_docs/: 2025-11-26-091923_polars_excel_unpivot_guide.md  PROMPT_ENGINEERING_STRATEGY.md  QUICK_REFERENCE.md  step1_file_discovery_prompt.md  step2_excel_processing_prompt.md  step3_cli_main_prompt.md  step4_comprehensive_testing_prompt.md
data/output/: 06044002-dade-41c6-a419-3d6a92f0516d.parquet  246ff8b8-7dec-4544-a494-35b7c3a76fb0.parquet  249906d0-2d9b-4df5-bb2c-f1e407ead277.parquet  2f9f19a1-1dbb-406b-98cb-c137be5ec86a.parquet  2fcf3899-a201-4c2e-b2ad-c7182e43c062.parquet  37d8e29b-f3fe-4aa9-87d0-150464d92704.parquet  50ed13e1-2faf-41d8-9dd0-369286d9f31f.parquet  60b3eb56-c1f2-43fb-a78e-f06a137acfcf.parquet  81e456b7-2094-450f-9617-34d40f42cfde.parquet  a75a564c-dca6-4cb5-b68d-486a8b368524.parquet  aa15adb4-d96b-4a51-a4b7-248897fcb523.parquet  b4e2b406-8611-47b4-bcee-992f12d54c66.parquet  b992c920-8ba2-4bf7-abd3-c81763e4ef8d.parquet  ba05f595-ea91-452e-85a7-de2aaac507b3.parquet  c422d230-ffb9-4563-9820-3cf9cd30b0e6.parquet  c9972c5f-e320-435e-a54f-5b277fedd80a.parquet  cba485ff-4795-47f2-a4c9-9394ef1e7cc8.parquet  d1291a40-e362-430b-a7d7-01423e240e41.parquet  f1b62d13-af3c-4abd-a4eb-5d9f7cbd4bf1.parquet  f44954f6-79cd-495b-8556-b1be8fad3241.parquet
prompts/: 006-detect-modified-excel-files.md  scratchpad.md
prompts/completed/: 001-add-file-scanner-csv.md  (+27 more)
tests/: conftest.py  test_find_sov_folders.py  test_integration.py  test_main.py  test_process_excel_files.py  test_tui.py
(+30 files in other folders)
